--- a/ICS372Group1GP1_Store/.classpath
+++ b/ICS372Group1GP1_Store/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="edu.ics372.gp1.store"/>
+	<classpathentry kind="src" path="edu.ics372.gp1.business"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
