class path stuff

--- a/ICS372Group1GP1_Interface/.classpath
+++ b/ICS372Group1GP1_Interface/.classpath
@@ -6,5 +6,10 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ICS372Group1GP1_Store">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="bin/edu.ics372.gp1.interface"/>
 </classpath>
